Ensure that the background covers the entire page

--- a/_source/assets/style.css
+++ b/_source/assets/style.css
@@ -4,6 +4,10 @@ body {
 	font-family: Roboto, Helvetica, sans-serif;
 	font-size: 12pt;
 	font-weight: lighter;
+	margin: 0;
+	min-height: 100%;
+	min-width: 100%;
+	position: absolute;
 }
 
 footer {
